Changelog
---------

0.79
* changes for players
- a trading center in Semos Inn
- fixed website: characters with the same name as creatures no longer get people killing those creatures listed
- change price of barbarian armor
- fixed graphics for balrog and killer bat corpse

* changes for admins
- new command /script -list
- new /script SetServerWelcome.class which will set a new login welcome message until the server is restarted 
- fixed broken logging of source position for items moved around on the ground


0.78
* changes for players
- various map fixes
- added a note about logging on account creation
- destroy the old wedding ring, if another is added to the same slot with it and use up the energy of the new one
- renamed Stichard Rallman
- balrog and his corpse redrawn
- semos mine town revival weeks with outfits, tic tac toe, paper chase and susi

* changes for developer / hosters / admins
- replaced old forked map editor with the official one from http://mapeditor.org/ 
- fixed error message: object does not have slot !quests
- check existence of character to be jailed
- check that the player in /jail-command exists


0.77
- improvements to the test infrastructure, now including coverage reports and various statistics about code quality
- more corpses redrawn and new kinds added
- now all a player's money is shown in the hall of fame (including money in bank chests)
- Keep max 12 sheep in the semos pen simultaneously
- tomatoes use a grower
- don't let pets/sheep dying result in concurrent modification
- Make it possible to name pets back to their original name
- allow always using the animal type to rename a pet (even if it has a name already)
- give 20 xp for the Cherub in the starting zone so players don't get to level 4 instantly 
- new items added to NPC buyers
- moved the chatlog to the main client window
- minimap and buddies are now a side panel
- added a way to clean the house portal cache
- tell support about /script DropPlayerItems