@@ -136,6 +136,7 @@ public class GameScreen implements PositionChangeListener, IGameScreen {
 	private final int sw;
 	private final int sh;
 
+	private long lastDrawYield = 0;
 	
 
 
@@ -573,7 +574,11 @@ public class GameScreen implements PositionChangeListener, IGameScreen {
 		// On Ubuntu 9.10 with Sub Java 1.6.0_15 the client does not react to typed letters
 		// in the chat line without the Thread.yield. The problem does neither occure on OpenJDK
 		// nor on Ubuntu 9.04
-		Thread.yield();
+		long now = System.currentTimeMillis();
+		if (now - lastDrawYield > 200) {
+			lastDrawYield = now;
+			Thread.yield();
+		}
 	}
 
 	/**
